Add more traductions
Add more traductions

--- a/Lang/settings_lang_de.ini
+++ b/Lang/settings_lang_de.ini
@@ -45,3 +45,7 @@ MsgPkgNoFiles = Es gibt keine PKG-Dateien im Installationsverzeichnis.
 MsgPkgNoListed = Sie müssen zuerst die entfernten Dateien auflisten.
 MsgPkgNoDelete = Konnte die folgenden entfernten Dateien nicht löschen.
 MsgPkgDeleted = Die ausgewählten Dateien wurden erfolgreich gelöscht.
+MsgTooltipUpdateUpdates = Aktualisierungen sind verfügbar. Bitte klicken Sie auf diese Schaltfläche, um sie herunterzuladen.
+MsgTooltipUpdateNoUpdates = Keine Updates gefunden.
+MsgTooltipUpdateNoInternet = Keine Internetverbindung.
+MsgUpdatesApplied = Updates erfolgreich angewendet.
