--- a/Lang/settings_lang_en.ini
+++ b/Lang/settings_lang_en.ini
@@ -45,3 +45,7 @@ MsgPkgNoFiles = There are no pkg files in the installation directory
 MsgPkgNoListed = You must first list the remote files
 MsgPkgNoDelete = Could not delete the following remote files
 MsgPkgDeleted = The selected files was deleted successfully
+MsgTooltipUpdateUpdates = Updates are available, please click this button to download it
+MsgTooltipUpdateNoUpdates = No updates found
+MsgTooltipUpdateNoInternet = No internet connection
+MsgUpdatesApplied = Updates applied successfully
