--- a/Lang/settings_lang_es.ini
+++ b/Lang/settings_lang_es.ini
@@ -45,3 +45,7 @@ MsgPkgNoFiles = No hay archivos PKG's en el directorio de instalacion
 MsgPkgNoListed = Primero debes listar los archivos PKG's
 MsgPkgNoDelete = No se pudieron eliminar los siguientes archivos PKG
 MsgPkgDeleted = Los archivos seleccionados fueron eliminados exitosamente!
+MsgTooltipUpdateUpdates = Hay actualizaciones disponibles. Por favor, haga clic en este botón para descargarlas.
+MsgTooltipUpdateNoUpdates = No se encontraron actualizaciones.
+MsgTooltipUpdateNoInternet = No hay conexión a internet.
+MsgUpdatesApplied = Actualizaciones aplicadas con éxito.
