--- a/Lang/settings_lang_fr.ini
+++ b/Lang/settings_lang_fr.ini
@@ -45,3 +45,7 @@ MsgPkgNoFiles = Il n'y a aucun fichier pkg dans le répertoire d'installation.
 MsgPkgNoListed = Vous devez d'abord lister les fichiers distants.
 MsgPkgNoDelete = Impossible de supprimer les fichiers distants suivants.
 MsgPkgDeleted = Les fichiers sélectionnés ont été supprimés avec succès.
+MsgTooltipUpdateUpdates = Des mises à jour sont disponibles. Veuillez cliquer sur ce bouton pour les télécharger.
+MsgTooltipUpdateNoUpdates = Aucune mise à jour trouvée.
+MsgTooltipUpdateNoInternet = Pas de connexion internet.
+MsgUpdatesApplyed = Mises à jour appliquées avec succès.
