--- a/Lang/settings_lang_it.ini
+++ b/Lang/settings_lang_it.ini
@@ -45,3 +45,7 @@ MsgPkgNoFiles = Non ci sono file pkg nella directory di installazione
 MsgPkgNoListed = Devi prima elencare i file remoti
 MsgPkgNoDelete = Impossibile eliminare i seguenti file remoti
 MsgPkgDeleted = I file selezionati sono stati eliminati con successo
+MsgTooltipUpdateUpdates = Sono disponibili aggiornamenti. Fare clic su questo pulsante per scaricarli.
+MsgTooltipUpdateNoUpdates = Nessun aggiornamento trovato.
+MsgTooltipUpdateNoInternet = Nessuna connessione a internet.
+MsgUpdatesApplyed = Aggiornamenti applicati con successo.
