--- a/Lang/settings_lang_pt.ini
+++ b/Lang/settings_lang_pt.ini
@@ -44,3 +44,7 @@ MsgPkgNoFiles = Não há arquivos pkg no diretório de instalação.
 MsgPkgNoListed = Você deve primeiro listar os arquivos remotos.
 MsgPkgNoDelete = Não foi possível excluir os seguintes arquivos remotos.
 MsgPkgDeleted = Os arquivos selecionados foram excluídos com sucesso.
+MsgTooltipUpdateUpdates = Atualizações estão disponíveis. Por favor, clique neste botão para baixá-las.
+MsgTooltipUpdateNoUpdates = Nenhuma atualização encontrada.
+MsgTooltipUpdateNoInternet = Sem conexão com a internet.
+MsgUpdatesApplyed = Atualizações aplicadas com sucesso.
